# nhentai

./: BUG_FIXES_SUMMARY.md  BUG_REPORT.md  CLAUDE.md  COOKIE_GUIDE.md  README.rst  pyproject.toml
.claude/: settings.local.json
.github/workflows/: python-package.yml
nhentai/: __init__.py  cmdline.py  command.py  constant.py  doujinshi.py  downloader.py  logger.py  parser.py  serializer.py  utils.py
tests/: test_download.py  test_parser.py
