[tool.poetry]
name = "nhentai"
version = "0.7.1"
description = "nhentai doujinshi downloader"
authors = ["Ricter Z <ricterzheng@gmail.com>", "AyoKeito"]
license = "MIT"
readme = "README.rst"
include = ["nhentai/viewer/**"]


[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.32.5"
soupsieve = "^2.8.1"
beautifulsoup4 = "^4.14.3"
tabulate = "^0.9.0"
iso8601 = "^2.1.0"
urllib3 = "^2.6.3"
httpx = "^0.28.1"
h11 = "^0.16.0"
curl-cffi = "^0.7.4"
rich = "^14.2.0"
chardet = "^5.2.0"
aiofiles = "^25.1.0"
pillow = "^10.4.0"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
nhentai = 'nhentai.command:main'
